Estoy grabando la primera version de mi proyecto de desarrollo web

--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -40,7 +40,7 @@
             </section>            
             <section>
                 <h1 class="tituloPrincipal">Excelentes rutinas</h1>
-                <img class="imagenes" src="../assets/img/Actividades.webp" alt="Foto de actividades">
+                <img class="imagenes d-block mx-auto" src="../assets/img/Actividades.webp" alt="Foto de actividades" width="800" height="500">
             </section>  
             <section>
                 <h2 class="tituloSub">Entrenamiento personalizado:</h2>
