--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
     </head>
     <body>
        <header class="header">
-            <div class="padreNavHeader">
+            <div class="padreNavHeader d-flex flex-direction-row justify-content-between">
                 <div class="logoPrincipal">
                     <a href="index.html">
-                        <img class="logo" src="./assets/img/logo_gimnasio.jpg" alt="Logo del gym">
+                        <img class="logo m-2 rounded-circle" src="./assets/img/logo_gimnasio.jpg" alt="Logo del gym" width="70px" height="70px">
                     </a>
                 </div>
                 <nav class="navHeader">
-                    <ul class="listaNav">
-                        <li class="box"><a href="#">Inicio</a></li>
-                        <li class="box"><a href="./pages/actividades.html">Actividades</a></li>
-                        <li class="box"><a href="./pages/horarios.html">Horarios</a></li>
-                        <li class="box"><a href="./pages/instalacion.html">Instalacion</a></li>
-                        <li class="box"><a href="./pages/contacto.html">Registro</a></li>
-                        <li class="box"><a target="_blank" href="https://www.facebook.com">Facebook</a></li>
+                    <ul class="listaNav d-flex list-group-horizontal m-4">
+                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="#">Inicio</a></li>
+                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./pages/actividades.html">Actividades</a></li>
+                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./pages/horarios.html">Horarios</a></li>
+                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./pages/instalacion.html">Instalacion</a></li>
+                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./pages/contacto.html">Registro</a></li>
+                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" target="_blank" href="https://www.facebook.com">Facebook</a></li>
                     </ul>
                 </nav>               
             </div>
@@ -36,31 +36,31 @@
                 <div>
                     <!--es el logo de whatsapp-->
                     <a target="_blank" href="https://www.whatsapp.com">
-                        <img class="logoWsp" src="./assets/img/Logo_whatsapp.jpg">
+                        <img class="logoWsp d-block position-fixed bottom-0 end-0 m-2 rounded-circle" src="./assets/img/Logo_whatsapp.jpg" width="40px" height="40px">
                     </a>
                 </div>
             </section>    
             <section>
                 <!--es el titulo principal h1-->
-                <h1 class="tituloPrincipal">Comienza hoy una nueva vida</h1>
+                <h1 class="tituloPrincipal h2 m-4">Comienza hoy una nueva vida</h1>
                 <div>
-                <p class="tamanioParrafo">Bienvenidos a Porto Gym, el gimnasio exclusivo para transformar ycuidar la salud de tu cuerpo.</p>
+                <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">Bienvenidos a Porto Gym, el gimnasio exclusivo para transformar ycuidar la salud de tu cuerpo.</p>
                 </div>
                 <div>
-                <p class="tamanioParrafo">Somos un gimnasio el cual llevo a cabo su apertura en el año 2015 ynos sentimos muy orgullosos de ejercer nuestra profesion y de brindarles las mejores rutinaspersonalizadas para cada uno de ustedes, con precios accesibles y la mejor dedicacion para suconfortabilidad, en esta pagina detallaremos las actividades que realizamos asi como dondecontactarnos, horarios y mas...</p>
+                <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">Somos un gimnasio el cual llevo a cabo su apertura en el año 2015 ynos sentimos muy orgullosos de ejercer nuestra profesion y de brindarles las mejores rutinaspersonalizadas para cada uno de ustedes, con precios accesibles y la mejor dedicacion para suconfortabilidad, en esta pagina detallaremos las actividades que realizamos asi como dondecontactarnos, horarios y mas...</p>
                 </div>     
             </section>  
             <section>
                 <!--es el sub-titulo h2-->
-                <h2 class="tituloSub">"Preparate para el inicio de tu nueva historia"</h2>
-                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/xL6BvBUFG4Q"title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <h2 class="tituloSub h2 text-center m-4">"Preparate para el inicio de tu nueva historia"</h2>
+                <iframe class="video d-block mx-auto" width="560" height="315" src="https://www.youtube.com/embed/xL6BvBUFG4Q"title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </section>  
        </main>
        <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>-->
        <script src="./js/bootstrap.bundle.min.js"></script>
        <footer>
             <!--es el texto ubicado en el pie de pagina-->
-            <p class="piePagina">Ubicacion: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenida Edison (Puerto)</p>
+            <p class="piePagina fs-6 m-4">Ubicacion: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenida Edison (Puerto)</p>
        </footer> 
     </body>
 </html>
