--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -43,15 +43,15 @@
                 <p class="tamanioParrafo">Ingrese sus datos personales y comentenos si alguna vez realizo actividad fisica, si lo hizo cuanto tiempo paso de ello y cuales son sus objetivos o metas. Nos pondremos en contacto en breve.</p>
                     <form action="./404.html">
                     <div>
-                        <label for="nombre" class="fuenteFormulario">Ingrese su nombre</label>
+                        <label for="nombre" class="fuenteFormulario fs-5">Ingrese su nombre</label>
                         <input id="nombre" type="text" placeholder="Nombre" required>
                     </div>
                     <div>
-                        <label for="numero" class="fuenteFormulario">Ingrese su numero</label>
+                        <label for="numero" class="fuenteFormulario fs-5">Ingrese su numero</label>
                         <input id="celular" type="numero" placeholder="Ejemplo +542235246859" required>
                     </div>
                     <div>
-                        <label for="comentario" class="fuenteFormulario">Cuentanos sobre usted</label>
+                        <label for="comentario" class="fuenteFormulario fs-5">Cuentanos sobre usted</label>
                         <textarea name="" id="comentario" cols="20" rows="5" placeholder="Ingrese un comentario" required></textarea>
                     </div>
                     <div>
@@ -62,7 +62,7 @@
             </section>
             <section>  
                 <h2 class="tituloSub">Como encontrarnos</h2>
-                <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3142.2072453846886!2d-57.5472803!3d-38.0422571!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584dddbf8dad131%3A0xce01f3bb0c59a2e5!2sAcha%20%26%2012%20de%20Octubre%2C%20Mar%20del%20Plata%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1686321542163!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe class="mapa d-block mx-auto" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3142.2072453846886!2d-57.5472803!3d-38.0422571!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584dddbf8dad131%3A0xce01f3bb0c59a2e5!2sAcha%20%26%2012%20de%20Octubre%2C%20Mar%20del%20Plata%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1686321542163!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </section>
        </main>
        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
