--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -11,20 +11,20 @@
     </head>
     <body>
         <header class="header">
-            <div class="padreNavHeader">
+            <div class="padreNavHeader d-flex flex-direction-row justify-content-between">
                 <div class="logoPrincipal">
                     <a href="../index.html">
-                        <img class="logo" src="../assets/img/Logo_gimnasio.jpg" alt="Logo del gym">
+                        <img class="logo m-2 rounded-circle" src="../assets/img/Logo_gimnasio.jpg" alt="Logo del gym" width="70px" height="70px">
                     </a>
                 </div>
                 <nav class="navHeader">
-                    <ul class="listaNav">
-                        <li class="box"><a href="../index.html">Inicio</a></li>
-                        <li class="box"><a href="#">Actividades</a></li>
-                        <li class="box"><a href="./horarios.html">Horarios</a></li>
-                        <li class="box"><a href="./instalacion.html">Instalacion</a></li>
-                        <li class="box"><a href="./contacto.html">Registro</a></li>
-                        <li class="box"><a target="_blank" href="https://www.facebook.com">Facebook</a></li>
+                    <ul class="listaNav d-flex list-group-horizontal m-4">
+                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="../index.html">Inicio</a></li>
+                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="#">Actividades</a></li>
+                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./horarios.html">Horarios</a></li>
+                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./instalacion.html">Instalacion</a></li>
+                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./contacto.html">Registro</a></li>
+                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" target="_blank" href="https://www.facebook.com">Facebook</a></li>
                     </ul>
                 </nav>               
             </div>
@@ -34,30 +34,30 @@
             <section>
                 <div>
                     <a target="_blank" href="https://www.whatsapp.com">
-                        <img class="logoWsp" src="../assets/img/Logo_whatsapp.jpg">
+                        <img class="logoWsp d-block position-fixed bottom-0 end-0 m-2 rounded-circle" src="../assets/img/Logo_whatsapp.jpg" width="40px" height="40px">
                     </a>
                 </div>
             </section>            
             <section>
-                <h1 class="tituloPrincipal">Excelentes rutinas</h1>
+                <h1 class="tituloPrincipal h2 m-4">Excelentes rutinas</h1>
                 <img class="imagenes d-block mx-auto" src="../assets/img/Actividades.webp" alt="Foto de actividades" width="800" height="500">
             </section>  
             <section>
-                <h2 class="tituloSub">Entrenamiento personalizado:</h2>
-                <p class="tamanioParrafo">Dependiendo de la condicion y los objetivos de cada persona se le asigna una rutina en particular, con la mejor atencion.</p>
+                <h2 class="tituloSub h2 text-center m-4">Entrenamiento personalizado:</h2>
+                <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">Dependiendo de la condicion y los objetivos de cada persona se le asigna una rutina en particular, con la mejor atencion.</p>
             </section>
             <section>
-                <h2 class="tituloSub">Clases de spinning:</h2>
-                <p class="tamanioParrafo">Contamos con clases de spinning con dos franjas horarias distintas, de mañana y de tarde, con equipamiento de alta calidad para brindarles el mejor servicio.</p>
+                <h2 class="tituloSub h2 text-center m-4">Clases de spinning:</h2>
+                <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">Contamos con clases de spinning con dos franjas horarias distintas, de mañana y de tarde, con equipamiento de alta calidad para brindarles el mejor servicio.</p>
             </section>
             <section>
-                <h2 class="tituloSub">Clases de pilates:</h2>
-                <p class="tamanioParrafo">Y por supuesto tambien contamos con clases de pilates en una sola franja horaria con la mejor atencion y predisposicion.</p>
+                <h2 class="tituloSub h2 text-center m-4">Clases de pilates:</h2>
+                <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">Y por supuesto tambien contamos con clases de pilates en una sola franja horaria con la mejor atencion y predisposicion.</p>
             </section>   
        </main>
        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
        <footer>
-            <p class="piePagina">Ubicacion: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenida Edison (Puerto)</p>
+            <p class="piePagina fs-6 m-4">Ubicacion: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenida Edison (Puerto)</p>
        </footer> 
     </body>
 </html>
