--- a/pages/horarios.html
+++ b/pages/horarios.html
@@ -11,20 +11,20 @@
     </head>
     <body>
         <header class="header">
-            <div class="padreNavHeader">
+            <div class="padreNavHeader d-flex flex-direction-row justify-content-between">
                 <div class="logoPrincipal">
                     <a href="../index.html">
-                        <img class="logo" src="../assets/img/Logo_gimnasio.jpg" alt="Logo del gym">
+                        <img class="logo m-2 rounded-circle" src="../assets/img/Logo_gimnasio.jpg" alt="Logo del gym" width="70px" height="70px">
                     </a>
                 </div>
                 <nav class="navHeader">
-                    <ul class="listaNav">
-                        <li class="box"><a href="../index.html">Inicio</a></li>
-                        <li class="box"><a href="./actividades.html">Actividades</a></li>
-                        <li class="box"><a href="#">Horarios</a></li>
-                        <li class="box"><a href="./instalacion.html">Instalacion</a></li>
-                        <li class="box"><a href="./contacto.html">Registro</a></li>
-                        <li class="box"><a target="_blank" href="https://www.facebook.com">Facebook</a></li>
+                    <ul class="listaNav d-flex list-group-horizontal m-4">
+                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="../index.html">Inicio</a></li>
+                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./actividades.html">Actividades</a></li>
+                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="#">Horarios</a></li>
+                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./instalacion.html">Instalacion</a></li>
+                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./contacto.html">Registro</a></li>
+                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" target="_blank" href="https://www.facebook.com">Facebook</a></li>
                     </ul>
                 </nav>               
             </div>
@@ -34,34 +34,34 @@
             <section>
                 <div>
                     <a target="_blank" href="https://www.whatsapp.com">
-                        <img class="logoWsp" src="../assets/img/Logo_whatsapp.jpg">
+                        <img class="logoWsp d-block position-fixed bottom-0 end-0 m-2 rounded-circle" src="../assets/img/Logo_whatsapp.jpg" width="40px" height="40px">
                     </a>
                 </div>
             </section>
             <section>
-                <h1 class="tituloPrincipal">Nuestros horarios</h1>
-                <img class="imagenes" src="../assets/img/Horarios.webp" alt="Foto de horarios">
+                <h1 class="tituloPrincipal h2 m-4">Nuestros horarios</h1>
+                <img class="imagenes d-block mx-auto" src="../assets/img/Horarios.webp" alt="Foto de horarios" width="800" height="500">
             </section>
             <section>
-                <h2 class="tituloSub">Horario general:</h2>
-                <p class="tamanioParrafo">Lunes a viernes 7:00 am a 23:00 pm</p>
+                <h2 class="tituloSub h2 text-center m-4">Horario general:</h2>
+                <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">Lunes a viernes 7:00 am a 23:00 pm</p>
             </section>
             <section>
-                <h2 class="tituloSub">Horario de clases de spinning:</h2>
-                <p class="tamanioParrafo">Lunes, miercoles y viernes 8:00 am a 9:30 am (mañana); 20:00 pm a 21:30 pm (noche)</p>
+                <h2 class="tituloSub h2 text-center m-4">Horario de clases de spinning:</h2>
+                <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">Lunes, miercoles y viernes 8:00 am a 9:30 am (mañana); 20:00 pm a 21:30 pm (noche)</p>
             </section>
             <section>
-                <h2 class="tituloSub">Horario de clases de pilates:</h2>
-                <p class="tamanioParrafo">Martes y jueves 18:00 pm a 19:30 pm</p>
+                <h2 class="tituloSub h2 text-center m-4">Horario de clases de pilates:</h2>
+                <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">Martes y jueves 18:00 pm a 19:30 pm</p>
             </section>
             <section>
-                <h2 class="tituloSub">Preguntanos</h2>
-                <p class="tamanioParrafo"> Por consultas en general comunicate con nosotros a traves de nuestro whatsapp y siguenos en nuestra cuenta de instagram (@porto_gym). Comienza hoy una nueva vida, TE ESPERAMOS !!</p>
+                <h2 class="tituloSub h2 text-center m-4">Preguntanos</h2>
+                <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg"> Por consultas en general comunicate con nosotros a traves de nuestro whatsapp y siguenos en nuestra cuenta de instagram (@porto_gym). Comienza hoy una nueva vida, TE ESPERAMOS !!</p>
             </section>
        </main>
        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
        <footer>
-            <p class="piePagina">Ubicacion: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenida Edison (Puerto)</p>
+            <p class="piePagina fs-6 m-4">Ubicacion: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenida Edison (Puerto)</p>
        </footer> 
     </body>
 </html>
