--- a/pages/instalacion.html
+++ b/pages/instalacion.html
@@ -11,20 +11,20 @@
     </head>
     <body>
         <header class="header">
-            <div class="padreNavHeader">
+            <div class="padreNavHeader d-flex flex-direction-row justify-content-between">
                 <div class="logoPrincipal">
                     <a href="../index.html">
-                        <img class="logo" src="../assets/img/Logo_gimnasio.jpg" alt="Logo del gym">
+                        <img class="logo m-2 rounded-circle" src="../assets/img/Logo_gimnasio.jpg" alt="Logo del gym" width="70px" height="70px">
                     </a>
                 </div>
                 <nav class="navHeader">
-                    <ul class="listaNav">
-                        <li class="box"><a href="../index.html">Inicio</a></li>
-                        <li class="box"><a href="./actividades.html">Actividades</a></li>
-                        <li class="box"><a href="./horarios.html">Horarios</a></li>
-                        <li class="box"><a href="#">Instalacion</a></li>
-                        <li class="box"><a href="./contacto.html">Registro</a></li>
-                        <li class="box"><a target="_blank" href="https://www.facebook.com">Facebook</a></li>
+                    <ul class="listaNav d-flex list-group-horizontal m-4">
+                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="../index.html">Inicio</a></li>
+                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./actividades.html">Actividades</a></li>
+                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./horarios.html">Horarios</a></li>
+                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="#">Instalacion</a></li>
+                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./contacto.html">Registro</a></li>
+                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" target="_blank" href="https://www.facebook.com">Facebook</a></li>
                     </ul>
                 </nav>               
             </div>
@@ -34,17 +34,17 @@
             <section>
                 <div>
                     <a target="_blank" href="https://www.whatsapp.com">
-                        <img class="logoWsp" src="../assets/img/Logo_whatsapp.jpg">
+                        <img class="logoWsp d-block position-fixed bottom-0 end-0 m-2 rounded-circle" src="../assets/img/Logo_whatsapp.jpg" width="40px" height="40px">
                     </a>
                 </div>
             </section>
-            <h1 class="tituloPrincipal">El espacio mas confortable</h1>        
-            <img class="imagenes" src="../assets/img/Instalaciones.webp" alt="Foto del Lugar">
-            <p class="tamanioParrafo">Nuestro espacio esta compuesto por un amplio salon donde se encuentranlas maquinarias, cerca de las ventanas se encuentran las cintas y las bicis estaticas para tener unbuen panorama al exterior, en el medio del salon se encuentra la recepcion donde se encuentra elpersonal especializado y del otro lado el salon de spinning con el equipamiento correspondiente ala actividad, tambien contamos con vestuarios con duchas y lockers para guardar sus pertenencias,tambien contamos con salidas al exterior en caso de querer tomar un poco de aire fresco. TEESPERAMOS !!</p>
+            <h1 class="tituloPrincipal h2 m-4">El espacio mas confortable</h1>        
+            <img class="imagenes d-block mx-auto" src="../assets/img/Instalaciones.webp" alt="Foto del Lugar" width="800" height="500">
+            <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg m-4">Nuestro espacio esta compuesto por un amplio salon donde se encuentranlas maquinarias, cerca de las ventanas se encuentran las cintas y las bicis estaticas para tener unbuen panorama al exterior, en el medio del salon se encuentra la recepcion donde se encuentra elpersonal especializado y del otro lado el salon de spinning con el equipamiento correspondiente ala actividad, tambien contamos con vestuarios con duchas y lockers para guardar sus pertenencias,tambien contamos con salidas al exterior en caso de querer tomar un poco de aire fresco. TEESPERAMOS !!</p>
        </main>
        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
        <footer>
-            <p class="piePagina">Ubicacion: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenida Edison (Puerto)</p>
+            <p class="piePagina fs-6 m-4">Ubicacion: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenida Edison (Puerto)</p>
        </footer> 
     </body>
 </html>
