--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
         <link rel="stylesheet" href="./css/estilos.css">
     </head>
     <body>
-       <header class="header">
-            <div class="padreNavHeader d-flex flex-direction-row justify-content-between">
-                <div class="logoPrincipal">
+       <header class="header container-fluid">
+            <div class="padreNavHeader row d-flex flex-direction-row justify-content-between">
+                <div class="logoPrincipal col-sm-12 col-lg-5">
                     <a href="index.html">
                         <img class="logo m-2 rounded-circle" src="./assets/img/logo_gimnasio.jpg" alt="Logo del gym" width="70px" height="70px">
                     </a>
                 </div>
-                <nav class="navHeader">
+                <nav class="navHeader col-sm-12 col-lg-7">
                     <ul class="listaNav d-flex list-group-horizontal m-4">
                         <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="#">Inicio</a></li>
                         <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./pages/actividades.html">Actividades</a></li>
@@ -31,7 +31,7 @@
             </div>
        </header>
 
-       <main>
+       <main class="main container-fluid">
             <section>
                 <div>
                     <!--es el logo de whatsapp-->
@@ -44,10 +44,10 @@
                 <!--es el titulo principal h1-->
                 <h1 class="tituloPrincipal h2 m-4">Comienza hoy una nueva vida</h1>
                 <div>
-                <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">Bienvenidos a Porto Gym, el gimnasio exclusivo para transformar ycuidar la salud de tu cuerpo.</p>
+                <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">Bienvenidos a Porto Gym, el gimnasio exclusivo para transformar y cuidar la salud de tu cuerpo.</p>
                 </div>
                 <div>
-                <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">Somos un gimnasio el cual llevo a cabo su apertura en el año 2015 ynos sentimos muy orgullosos de ejercer nuestra profesion y de brindarles las mejores rutinaspersonalizadas para cada uno de ustedes, con precios accesibles y la mejor dedicacion para suconfortabilidad, en esta pagina detallaremos las actividades que realizamos asi como dondecontactarnos, horarios y mas...</p>
+                <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">Somos un gimnasio el cual llevo a cabo su apertura en el año 2015 y nos sentimos muy orgullosos de ejercer nuestra profesion y de brindarles las mejores rutinas personalizadas para cada uno de ustedes, con precios accesibles y la mejor dedicacion para su confortabilidad, en esta pagina detallaremos las actividades que realizamos asi como donde contactarnos, horarios y mas...</p>
                 </div>     
             </section>  
             <section>
@@ -58,9 +58,9 @@
        </main>
        <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>-->
        <script src="./js/bootstrap.bundle.min.js"></script>
-       <footer>
+       <footer class="footer container-fluid">
             <!--es el texto ubicado en el pie de pagina-->
-            <p class="piePagina fs-6 m-4">Ubicacion: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenida Edison (Puerto)</p>
+            <p class="piePagina fs-6 m-5 text-decoration-underline">Ubicacion: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenida Edison (Puerto)</p>
        </footer> 
     </body>
 </html>
