--- a/pages/horarios.html
+++ b/pages/horarios.html
@@ -10,14 +10,14 @@
         <link rel="stylesheet" href="../css/estilos.css">
     </head>
     <body>
-        <header class="header">
+        <header class="header container-fluid">
             <div class="padreNavHeader d-flex flex-direction-row justify-content-between">
-                <div class="logoPrincipal">
+                <div class="logoPrincipal col-sm-12 col-lg-5">
                     <a href="../index.html">
                         <img class="logo m-2 rounded-circle" src="../assets/img/Logo_gimnasio.jpg" alt="Logo del gym" width="70px" height="70px">
                     </a>
                 </div>
-                <nav class="navHeader">
+                <nav class="navHeader col-sm-12 col-lg-7">
                     <ul class="listaNav d-flex list-group-horizontal m-4">
                         <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="../index.html">Inicio</a></li>
                         <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./actividades.html">Actividades</a></li>
@@ -30,7 +30,7 @@
             </div>
        </header>
 
-       <main>
+       <main class="main container-fluid">
             <section>
                 <div>
                     <a target="_blank" href="https://www.whatsapp.com">
@@ -60,8 +60,8 @@
             </section>
        </main>
        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-       <footer>
-            <p class="piePagina fs-6 m-4">Ubicacion: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenida Edison (Puerto)</p>
+       <footer class="footer container-fluid">
+            <p class="piePagina fs-6 m-5 text-decoration-underline">Ubicacion: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenida Edison (Puerto)</p>
        </footer> 
     </body>
 </html>
