agrego mixin y seo, ultimo detalles en la ortografia

--- a/pages/horarios.html
+++ b/pages/horarios.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Horarios | Porto Gym</title>
+        <meta name="description" content="Observa los horarios disponibles de nuestro establecimiento asi como de cada una de nuestras actvidades y elige el mejor momento del dia para ti">
+        <meta name="keywords" content="horarios mañana tarde noche">
+        <title>Horarios de apertura | Porto Gym</title>
         <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/estilos.css">
@@ -22,7 +24,7 @@
                         <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="../index.html">Inicio</a></li>
                         <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./actividades.html">Actividades</a></li>
                         <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="#">Horarios</a></li>
-                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./instalacion.html">Instalacion</a></li>
+                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./instalacion.html">Instalación</a></li>
                         <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./contacto.html">Registro</a></li>
                         <li class="box text-center list-group-item"><a class="text-decoration-none h5" target="_blank" href="https://www.facebook.com">Facebook</a></li>
                     </ul>
@@ -48,20 +50,20 @@
             </section>
             <section>
                 <h2 class="tituloSub h2 text-center m-4">Horario de clases de spinning:</h2>
-                <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">Lunes, miercoles y viernes 8:00 am a 9:30 am (mañana); 20:00 pm a 21:30 pm (noche)</p>
+                <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">Lunes, miércoles y viernes 8:00 am a 9:30 am (mañana); 20:00 pm a 21:30 pm (noche)</p>
             </section>
             <section>
                 <h2 class="tituloSub h2 text-center m-4">Horario de clases de pilates:</h2>
                 <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">Martes y jueves 18:00 pm a 19:30 pm</p>
             </section>
             <section>
-                <h2 class="tituloSub h2 text-center m-4">Preguntanos</h2>
-                <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg"> Por consultas en general comunicate con nosotros a traves de nuestro whatsapp y siguenos en nuestra cuenta de instagram (@porto_gym). Comienza hoy una nueva vida, TE ESPERAMOS !!</p>
+                <h2 class="tituloSub h2 text-center m-4">Pregúntanos</h2>
+                <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg"> Por consultas en general comunícate con nosotros a través de nuestro whatsapp y síguenos en nuestra cuenta de instagram (@porto_gym). Comienza hoy una nueva vida, TE ESPERAMOS !!</p>
             </section>
        </main>
        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
        <footer class="footer container-fluid">
-            <p class="piePagina fs-6 m-5 text-decoration-underline">Ubicacion: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenida Edison (Puerto)</p>
+            <p class="piePagina fs-6 m-5 text-decoration-underline">Ubicación: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenida Edison (Puerto)</p>
        </footer> 
     </body>
 </html>
