--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Inicio | Porto Gym</title>
+        <meta name="description" content="Atrevete a cambiar tu rutina, comienza a cuidar la salud de tu cuerpo, completa ejercicios y observa como el paso de los dias van marcando tus cambios. Te esperamos">
+        <meta name="keywords" content="presentacion introduccion video">
+        <title>Porto Gym | Gimnasio</title>
         <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-        <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">-->
         <link rel="stylesheet" href="./css/bootstrap.min.css">
         <link rel="stylesheet" href="./css/estilos.css">
     </head>
@@ -23,7 +24,7 @@
                         <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="#">Inicio</a></li>
                         <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./pages/actividades.html">Actividades</a></li>
                         <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./pages/horarios.html">Horarios</a></li>
-                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./pages/instalacion.html">Instalacion</a></li>
+                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./pages/instalacion.html">Instalación</a></li>
                         <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./pages/contacto.html">Registro</a></li>
                         <li class="box text-center list-group-item"><a class="text-decoration-none h5" target="_blank" href="https://www.facebook.com">Facebook</a></li>
                     </ul>
@@ -34,33 +35,28 @@
        <main class="main container-fluid">
             <section>
                 <div>
-                    <!--es el logo de whatsapp-->
                     <a target="_blank" href="https://www.whatsapp.com">
                         <img class="logoWsp d-block position-fixed bottom-0 end-0 m-2 rounded-circle" src="./assets/img/Logo_whatsapp.jpg" width="40px" height="40px">
                     </a>
                 </div>
             </section>    
             <section>
-                <!--es el titulo principal h1-->
                 <h1 class="tituloPrincipal h2 m-4">Comienza hoy una nueva vida</h1>
                 <div>
                 <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">Bienvenidos a Porto Gym, el gimnasio exclusivo para transformar y cuidar la salud de tu cuerpo.</p>
                 </div>
                 <div>
-                <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">Somos un gimnasio el cual llevo a cabo su apertura en el año 2015 y nos sentimos muy orgullosos de ejercer nuestra profesion y de brindarles las mejores rutinas personalizadas para cada uno de ustedes, con precios accesibles y la mejor dedicacion para su confortabilidad, en esta pagina detallaremos las actividades que realizamos asi como donde contactarnos, horarios y mas...</p>
+                <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">Somos un gimnasio el cual llevó a cabo su apertura en el año 2015 y nos sentimos muy orgullosos de ejercer nuestra profesión y de brindarles las mejores rutinas personalizadas para cada uno de ustedes, con precios accesibles y la mejor dedicación para su confortabilidad, en esta pagina detallaremos las actividades que realizamos asi como donde contactárnos, horarios y más...</p>
                 </div>     
             </section>  
             <section>
-                <!--es el sub-titulo h2-->
-                <h2 class="tituloSub h2 text-center m-4">"Preparate para el inicio de tu nueva historia"</h2>
+                <h2 class="tituloSub h2 text-center m-4">"Prepárate para el inicio de tu nueva historia"</h2>
                 <iframe class="video d-block mx-auto" width="560" height="315" src="https://www.youtube.com/embed/xL6BvBUFG4Q"title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </section>  
+            </section>
        </main>
-       <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>-->
        <script src="./js/bootstrap.bundle.min.js"></script>
        <footer class="footer container-fluid">
-            <!--es el texto ubicado en el pie de pagina-->
-            <p class="piePagina fs-6 m-5 text-decoration-underline">Ubicacion: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenida Edison (Puerto)</p>
+            <p class="piePagina fs-6 m-5 text-decoration-underline">Ubicación: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenida Edison (Puerto)</p>
        </footer> 
     </body>
 </html>
