--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Actividades | Porto Gym</title>
+        <meta name="description" content="Conoce las rutinas realizadas en nuestro establecimiento y elige la atividad adecuada para ti">
+        <meta name="keywords" content="rutinas actividades">
+        <title>Rutinas Personalizadas | Porto Gym</title>
         <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/estilos.css">
@@ -22,7 +24,7 @@
                         <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="../index.html">Inicio</a></li>
                         <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="#">Actividades</a></li>
                         <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./horarios.html">Horarios</a></li>
-                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./instalacion.html">Instalacion</a></li>
+                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./instalacion.html">Instalación</a></li>
                         <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./contacto.html">Registro</a></li>
                         <li class="box text-center list-group-item"><a class="text-decoration-none h5" target="_blank" href="https://www.facebook.com">Facebook</a></li>
                     </ul>
@@ -44,7 +46,7 @@
             </section>  
             <section>
                 <h2 class="tituloSub h2 text-center m-4">Entrenamiento personalizado:</h2>
-                <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">Dependiendo de la condicion y los objetivos de cada persona se le asigna una rutina en particular, con la mejor atencion.</p>
+                <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">Dependiendo de la condición y los objetivos de cada persona se le asigna una rutina en particular, con la mejor atención.</p>
             </section>
             <section>
                 <h2 class="tituloSub h2 text-center m-4">Clases de spinning:</h2>
@@ -52,12 +54,12 @@
             </section>
             <section>
                 <h2 class="tituloSub h2 text-center m-4">Clases de pilates:</h2>
-                <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">Y por supuesto tambien contamos con clases de pilates en una sola franja horaria con la mejor atencion y predisposicion.</p>
+                <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">Y por supuesto tambien contamos con clases de pilates en una sola franja horaria con la mejor atención y predisposición.</p>
             </section>   
        </main>
        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
        <footer class="footer container-fluid">
-            <p class="piePagina fs-6 m-5 text-decoration-underline">Ubicacion: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenida Edison (Puerto)</p>
+            <p class="piePagina fs-6 m-5 text-decoration-underline">Ubicación: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenida Edison (Puerto)</p>
        </footer> 
     </body>
 </html>
