--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Contactanos | Porto Gym</title>
+        <meta name="description" content="Comunicate con nosotros, comentandonos su situacion asi como que metas desea lograr y su disponibilidad horaria">
+        <meta name="keywords" content="contacto datos comentario">
+        <title>Contáctanos por primera vez | Porto Gym</title>
         <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/estilos.css">
@@ -22,7 +24,7 @@
                         <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="../index.html">Inicio</a></li>
                         <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./actividades.html">Actividades</a></li>
                         <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./horarios.html">Horarios</a></li>
-                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./instalacion.html">Instalacion</a></li>
+                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./instalacion.html">Instalación</a></li>
                         <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="#">Registro</a></li>
                         <li class="box text-center list-group-item"><a class="text-decoration-none h5" target="_blank" href="https://www.facebook.com">Facebook</a></li>
                     </ul>
@@ -39,19 +41,19 @@
                 </div>
             </section>
             <section>  
-                <h1 class="tituloPrincipal h2 m-4">Coloque sus datos y comentenos su situacion</h1>
-                <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg m-4">Ingrese sus datos personales y comentenos si alguna vez realizo actividad fisica, si lo hizo cuanto tiempo paso de ello y cuales son sus objetivos o metas. Nos pondremos en contacto en breve.</p>
+                <h1 class="tituloPrincipal h2 m-4">Coloque sus datos y coméntenos su situación</h1>
+                <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg m-4">Ingrese sus datos personales y coméntenos si alguna vez realizó actividad física, si lo hizo cuánto tiempo paso de ello y cuáles son sus objetivos o metas. Nos pondremos en contacto en breve.</p>
                     <form action="./404.html">
                     <div>
                         <label for="nombre" class="fuenteFormulario fs-5">Ingrese su nombre</label>
                         <input id="nombre" type="text" placeholder="Nombre" required>
                     </div>
                     <div>
-                        <label for="numero" class="fuenteFormulario fs-5">Ingrese su numero</label>
+                        <label for="numero" class="fuenteFormulario fs-5">Ingrese su número</label>
                         <input id="celular" type="numero" placeholder="Ejemplo +542235246859" required>
                     </div>
                     <div>
-                        <label for="comentario" class="fuenteFormulario fs-5">Cuentanos sobre usted</label>
+                        <label for="comentario" class="fuenteFormulario fs-5">Cuéntanos sobre usted</label>
                         <textarea name="" id="comentario" cols="20" rows="5" placeholder="Ingrese un comentario" required></textarea>
                     </div>
                     <div>
@@ -61,13 +63,13 @@
                     </form>
             </section>
             <section>  
-                <h2 class="tituloSub h2 text-center m-4">Como encontrarnos</h2>
+                <h2 class="tituloSub h2 text-center m-4">Cómo encontrarnos</h2>
                 <iframe class="mapa d-block mx-auto" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3142.2072453846886!2d-57.5472803!3d-38.0422571!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584dddbf8dad131%3A0xce01f3bb0c59a2e5!2sAcha%20%26%2012%20de%20Octubre%2C%20Mar%20del%20Plata%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1686321542163!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </section>
        </main>
        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
        <footer class="footer container-fluid">
-            <p class="piePagina fs-6 m-5 text-decoration-underline">Ubicacion: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenida Edison (Puerto)</p>
+            <p class="piePagina fs-6 m-5 text-decoration-underline">Ubicación: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenida Edison (Puerto)</p>
        </footer> 
     </body>
 </html>
