--- a/pages/instalacion.html
+++ b/pages/instalacion.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Instalaciones | Porto Gym</title>
+        <meta name="description" content="Observa las comodidades de nuestro salon, asi como el equipo que se encuentra en ella y sus dimensiones">
+        <meta name="keywords" content="lugar comodidad equipamiento">
+        <title>Nuestro salon | Porto Gym</title>
         <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/estilos.css">
@@ -22,7 +24,7 @@
                         <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="../index.html">Inicio</a></li>
                         <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./actividades.html">Actividades</a></li>
                         <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./horarios.html">Horarios</a></li>
-                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="#">Instalacion</a></li>
+                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="#">Instalación</a></li>
                         <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./contacto.html">Registro</a></li>
                         <li class="box text-center list-group-item"><a class="text-decoration-none h5" target="_blank" href="https://www.facebook.com">Facebook</a></li>
                     </ul>
@@ -40,11 +42,11 @@
             </section>
             <h1 class="tituloPrincipal h2 m-4">El espacio mas confortable</h1>        
             <img class="imagenes d-block mx-auto" src="../assets/img/Instalaciones.webp" alt="Foto del Lugar" width="800" height="500">
-            <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg m-4">Nuestro espacio esta compuesto por un amplio salon donde se encuentran las maquinarias, cerca de las ventanas se encuentran las cintas y las bicis estaticas para tener un buen panorama al exterior, en el medio del salon se encuentra la recepcion donde se encuentra el personal especializado y del otro lado el salon de spinning con el equipamiento correspondiente a la actividad, tambien contamos con vestuarios con duchas y lockers para guardar sus pertenencias, tambien contamos con salidas al exterior en caso de querer tomar un poco de aire fresco. TE ESPERAMOS !!</p>
+            <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg m-4">Nuestro espacio esta compuesto por un amplio salón donde se encuentran las maquinarias, cerca de las ventanas se encuentran las cintas y las bicis estáticas para tener un buen panorama al exterior, en el medio del salón se encuentra la recepción donde se encuentra el personal especializado y del otro lado el salón de spinning con el equipamiento correspondiente a la actividad, tambien contamos con vestuarios con duchas y lockers para guardar sus pertenencias, tambien contamos con salidas al exterior en caso de querer tomar un poco de aire fresco. TE ESPERAMOS !!</p>
        </main>
        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
        <footer class="footer container-fluid">
-            <p class="piePagina fs-6 m-5 text-decoration-underline">Ubicacion: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenida Edison (Puerto)</p>
+            <p class="piePagina fs-6 m-5 text-decoration-underline">Ubicación: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenida Edison (Puerto)</p>
        </footer> 
     </body>
 </html>
