agrego position sticky al navegador

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="./css/estilos.css">
     </head>
     <body>
-       <header class="header container-fluid">
+       <header class="header container-fluid sticky-top">
             <div class="padreNavHeader row d-flex flex-direction-row justify-content-between">
                 <div class="logoPrincipal col-sm-12 col-lg-5">
                     <a href="index.html">
@@ -54,9 +54,9 @@
                 <iframe class="video d-block mx-auto" width="560" height="315" src="https://www.youtube.com/embed/xL6BvBUFG4Q"title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </section>
        </main>
-       <script src="./js/bootstrap.bundle.min.js"></script>
-       <footer class="footer container-fluid">
-            <p class="piePagina fs-6 m-5 text-decoration-underline">Ubicación: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenida Edison (Puerto)</p>
-       </footer> 
+       <footer class="footer container-fluid bg-white">
+            <p class="piePagina fs-6 text-decoration-underline text-center">Ubicación: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenida Edison (Puerto)</p>
+       </footer>
+       <script src="./js/bootstrap.bundle.min.js"></script> 
     </body>
 </html>
