--- a/pages/404.html
+++ b/pages/404.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="../css/estilos.css">
     </head>
     <body>
-        <header class="header container-fluid">
+        <header class="header container-fluid sticky-top">
             <div class="padreNavHeader d-flex flex-direction-row justify-content-between">
                 <div class="logoPrincipal col-sm-12 col-lg-5">
                     <a href="../index.html">
@@ -23,7 +23,7 @@
                         <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./actividades.html">Actividades</a></li>
                         <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./horarios.html">Horarios</a></li>
                         <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./instalacion.html">Instalación</a></li>
-                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="#">Registro</a></li>
+                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./contacto.html">Registro</a></li>
                         <li class="box text-center list-group-item"><a class="text-decoration-none h5" target="_blank" href="https://www.facebook.com">Facebook</a></li>
                     </ul>
                 </nav>               
