--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="../css/estilos.css">
     </head>
     <body>
-        <header class="header container-fluid">
+        <header class="header container-fluid sticky-top">
             <div class="padreNavHeader d-flex flex-direction-row justify-content-between">
                 <div class="logoPrincipal col-sm-12 col-lg-5">
                     <a href="../index.html">
@@ -42,7 +42,7 @@
             </section>            
             <section>
                 <h1 class="tituloPrincipal h2 m-4">Excelentes rutinas</h1>
-                <img class="imagenes d-block mx-auto" src="../assets/img/Actividades.webp" alt="Foto de actividades" width="800" height="500">
+                <img class="imagenes d-block mx-auto border border-primary rounded" src="../assets/img/Actividades.webp" alt="Foto de actividades" width="800" height="500">
             </section>  
             <section>
                 <h2 class="tituloSub h2 text-center m-4">Entrenamiento personalizado:</h2>
