--- a/pages/horarios.html
+++ b/pages/horarios.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="../css/estilos.css">
     </head>
     <body>
-        <header class="header container-fluid">
+        <header class="header container-fluid sticky-top">
             <div class="padreNavHeader d-flex flex-direction-row justify-content-between">
                 <div class="logoPrincipal col-sm-12 col-lg-5">
                     <a href="../index.html">
