agrego estilos y gradiente al footer, gradiente al header, animacion a las imagenes y aplico iconos de font awesome, creo la pagina de error 404

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="./css/bootstrap.min.css">
         <link rel="stylesheet" href="./css/estilos.css">
+        <script src="https://kit.fontawesome.com/72d0c50021.js" crossorigin="anonymous"></script>
     </head>
     <body>
        <header class="header container-fluid sticky-top">
@@ -32,7 +33,7 @@
             </div>
        </header>
 
-       <main class="main container-fluid">
+       <main class="main container">
             <section>
                 <div>
                     <a target="_blank" href="https://www.whatsapp.com">
@@ -51,11 +52,11 @@
             </section>  
             <section>
                 <h2 class="tituloSub h2 text-center m-4">"Prepárate para el inicio de tu nueva historia"</h2>
-                <iframe class="video d-block mx-auto" width="560" height="315" src="https://www.youtube.com/embed/xL6BvBUFG4Q"title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe class="video d-block mx-auto my-5 border border-secondary rounded" width="700" height="400" src="https://www.youtube.com/embed/xL6BvBUFG4Q"title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </section>
        </main>
-       <footer class="footer container-fluid bg-white">
-            <p class="piePagina fs-6 text-decoration-underline text-center">Ubicación: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenida Edison (Puerto)</p>
+       <footer class="footer container-fluid bg-white d-flex justify-content-center align-items-center">
+            <p class="piePagina fs-6 my-4"><i class="fa-solid fa-location-dot fa-xs" style="color: #8b0be0;"></i> Ubicación: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenída Edison (Puerto)<br><i class="fa-solid fa-envelope fa-xs" style="color: #8b0be0;"></i> Comunícate por mail: portogym@gmail.com<br><i class="fa-solid fa-phone fa-xs" style="color: #8b0be0;"></i> Teléfono: 2236052120</p>  
        </footer>
        <script src="./js/bootstrap.bundle.min.js"></script> 
     </body>
