--- a/pages/404.html
+++ b/pages/404.html
@@ -4,10 +4,11 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Página de Error | Porto Gym</title>
+        <title>Error 404 | Págona no encontrada</title>
         <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/estilos.css">
+        <script src="https://kit.fontawesome.com/72d0c50021.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header class="header container-fluid sticky-top">
@@ -30,12 +31,28 @@
             </div>
        </header>
 
-       <main class="main container-fluid">
-            <p class="tamanioParrafo fs-5 fst-italic lh-lg">Error 404. Página no encontrada !</p>
+       <main class="main container">
+            <section>
+                <div>
+                    <a target="_blank" href="https://www.whatsapp.com">
+                        <img class="logoWsp d-block position-fixed bottom-0 end-0 m-2 rounded-circle" src="../assets/img/Logo_whatsapp.jpg" width="40px" height="40px">
+                    </a>
+                </div>
+            </section>
+            <div>
+                <h1 class="tituloPrincipal h2 m-4">Error 404</h1>
+            </div>
+            <div>
+                <h2 class="tituloSub h2 text-center m-4">Página no encontrada</h2>
+                <p class="tamanioParrafo fs-5 fst-italic lh-lg text-center">Lo sentimos, la página que estás buscando no esta disponible.</p>
+            </div>
+            <div>
+                <i class="icono fa-solid fa-face-meh fa-shake iconoGrande mt-2 mb-5 d-flex justify-content-center" style="color: #ffffff;"></i>
+            </div>
        </main>
-       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-       <footer class="footer container-fluid">
-            <p class="piePagina fs-6 m-5 text-decoration-underline">Ubicación: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenida Edison (Puerto)</p>
-       </footer> 
+       <footer class="footer container-fluid bg-white d-flex justify-content-center align-items-center">
+            <p class="piePagina fs-6 my-4"><i class="fa-solid fa-location-dot fa-xs" style="color: #8b0be0;"></i> Ubicación: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenída Edison (Puerto)<br><i class="fa-solid fa-envelope fa-xs" style="color: #8b0be0;"></i> Comunícate por mail: portogym@gmail.com<br><i class="fa-solid fa-phone fa-xs" style="color: #8b0be0;"></i> Teléfono: 2236052120</p>  
+        </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
 </html>
