--- a/pages/instalacion.html
+++ b/pages/instalacion.html
@@ -10,6 +10,7 @@
         <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/estilos.css">
+        <script src="https://kit.fontawesome.com/72d0c50021.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header class="header container-fluid sticky-top">
@@ -32,7 +33,7 @@
             </div>
        </header>
 
-       <main class="main container-fluid">
+       <main class="main container">
             <section>
                 <div>
                     <a target="_blank" href="https://www.whatsapp.com">
@@ -41,12 +42,12 @@
                 </div>
             </section>
             <h1 class="tituloPrincipal h2 m-4">El espacio mas confortable</h1>        
-            <img class="imagenes d-block mx-auto" src="../assets/img/Instalaciones.webp" alt="Foto del Lugar" width="800" height="500">
-            <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg m-4">Nuestro espacio esta compuesto por un amplio salón donde se encuentran las maquinarias, cerca de las ventanas se encuentran las cintas y las bicis estáticas para tener un buen panorama al exterior, en el medio del salón se encuentra la recepción donde se encuentra el personal especializado y del otro lado el salón de spinning con el equipamiento correspondiente a la actividad, tambien contamos con vestuarios con duchas y lockers para guardar sus pertenencias, tambien contamos con salidas al exterior en caso de querer tomar un poco de aire fresco. TE ESPERAMOS !!</p>
+            <img class="imagenes d-block mx-auto border border-4 border-white rounded" src="../assets/img/Instalaciones.webp" alt="Foto del Lugar" width="800" height="500">
+            <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg m-4 mb-5">Nuestro espacio esta compuesto por un amplio salón donde se encuentran las maquinarias, cerca de las ventanas se encuentran las cintas y las bicis estáticas para tener un buen panorama al exterior, en el medio del salón se encuentra la recepción donde se encuentra el personal especializado y del otro lado el salón de spinning con el equipamiento correspondiente a la actividad, tambien contamos con vestuarios con duchas y lockers para guardar sus pertenencias, tambien contamos con salidas al exterior en caso de querer tomar un poco de aire fresco. TE ESPERAMOS !!</p>
        </main>
-       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-       <footer class="footer container-fluid">
-            <p class="piePagina fs-6 m-5 text-decoration-underline">Ubicación: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenida Edison (Puerto)</p>
-       </footer> 
+       <footer class="footer container-fluid bg-white d-flex justify-content-center align-items-center">
+            <p class="piePagina fs-6 my-4"><i class="fa-solid fa-location-dot fa-xs" style="color: #8b0be0;"></i> Ubicación: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenída Edison (Puerto)<br><i class="fa-solid fa-envelope fa-xs" style="color: #8b0be0;"></i> Comunícate por mail: portogym@gmail.com<br><i class="fa-solid fa-phone fa-xs" style="color: #8b0be0;"></i> Teléfono: 2236052120</p>  
+        </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
 </html>
