--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -10,6 +10,7 @@
         <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/estilos.css">
+        <script src="https://kit.fontawesome.com/72d0c50021.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header class="header container-fluid sticky-top">
@@ -32,7 +33,7 @@
             </div>
        </header>
 
-       <main class="main container-fluid">
+       <main class="main container">
             <section>
                 <div>
                     <a target="_blank" href="https://www.whatsapp.com">
@@ -42,34 +43,34 @@
             </section>
             <section>  
                 <h1 class="tituloPrincipal h2 m-4">Coloque sus datos y coméntenos su situación</h1>
-                <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg m-4">Ingrese sus datos personales y coméntenos si alguna vez realizó actividad física, si lo hizo cuánto tiempo paso de ello y cuáles son sus objetivos o metas. Nos pondremos en contacto en breve.</p>
-                    <form action="./404.html">
-                    <div>
-                        <label for="nombre" class="fuenteFormulario fs-5">Ingrese su nombre</label>
-                        <input id="nombre" type="text" placeholder="Nombre" required>
-                    </div>
-                    <div>
-                        <label for="numero" class="fuenteFormulario fs-5">Ingrese su número</label>
-                        <input id="celular" type="numero" placeholder="Ejemplo +542235246859" required>
-                    </div>
-                    <div>
-                        <label for="comentario" class="fuenteFormulario fs-5">Cuéntanos sobre usted</label>
-                        <textarea name="" id="comentario" cols="20" rows="5" placeholder="Ingrese un comentario" required></textarea>
-                    </div>
-                    <div>
-                        <input type="submit" value="Enviar datos">
-                        <input type="reset" value="Limpiar">
-                    </div>
+                    <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg m-4">Ingrese sus datos personales y coméntenos si alguna vez realizó actividad física, si lo hizo cuánto tiempo paso de ello y cuáles son sus objetivos o metas. Nos pondremos en contacto en breve.</p>
+                    <form class="formulario" action="./404.html">
+                        <div>
+                            <label for="nombre" class="fuenteFormulario fs-5">Ingrese su nombre</label>
+                            <input id="nombre" type="text" placeholder="Nombre" required>
+                        </div>
+                        <div>
+                            <label for="numero" class="fuenteFormulario fs-5">Ingrese su número</label>
+                            <input id="celular" type="numero" placeholder="Ejemplo +542235246859" required>
+                        </div>
+                        <div>
+                            <label for="comentario" class="fuenteFormulario fs-5">Cuéntanos sobre usted</label>
+                            <textarea name="" id="comentario" type="comment" cols="20" rows="5" placeholder="Ingrese       un comentario" required></textarea>
+                        </div>
+                        <div>
+                            <input type="submit" value="Enviar datos">
+                            <input type="reset" value="Limpiar">
+                        </div>
                     </form>
             </section>
             <section>  
                 <h2 class="tituloSub h2 text-center m-4">Cómo encontrarnos</h2>
-                <iframe class="mapa d-block mx-auto" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3142.2072453846886!2d-57.5472803!3d-38.0422571!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584dddbf8dad131%3A0xce01f3bb0c59a2e5!2sAcha%20%26%2012%20de%20Octubre%2C%20Mar%20del%20Plata%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1686321542163!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe class="mapa d-block mx-auto my-5 rounded" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3142.2072453846886!2d-57.5472803!3d-38.0422571!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584dddbf8dad131%3A0xce01f3bb0c59a2e5!2sAcha%20%26%2012%20de%20Octubre%2C%20Mar%20del%20Plata%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1686321542163!5m2!1ses-419!2sar" width="700" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </section>
        </main>
-       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-       <footer class="footer container-fluid">
-            <p class="piePagina fs-6 m-5 text-decoration-underline">Ubicación: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenida Edison (Puerto)</p>
-       </footer> 
+       <footer class="footer container-fluid bg-white d-flex justify-content-center align-items-center">
+            <p class="piePagina fs-6 my-4"><i class="fa-solid fa-location-dot fa-xs" style="color: #8b0be0;"></i> Ubicación: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenída Edison (Puerto)<br><i class="fa-solid fa-envelope fa-xs" style="color: #8b0be0;"></i> Comunícate por mail: portogym@gmail.com<br><i class="fa-solid fa-phone fa-xs" style="color: #8b0be0;"></i> Teléfono: 2236052120</p>  
+        </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
 </html>
