Realizo cambios en las identaciones y agrego alt a las imagenes

--- a/index.html
+++ b/index.html
@@ -1,63 +1,141 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Atrevete a cambiar tu rutina, comienza a cuidar la salud de tu cuerpo, completa ejercicios y observa como el paso de los dias van marcando tus cambios. Te esperamos">
-        <meta name="keywords" content="presentacion introduccion video">
-        <title>Porto Gym | Gimnasio</title>
-        <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-        <link rel="stylesheet" href="./css/bootstrap.min.css">
-        <link rel="stylesheet" href="./css/estilos.css">
-        <script src="https://kit.fontawesome.com/72d0c50021.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-       <header class="header container-fluid sticky-top">
-            <div class="padreNavHeader row d-flex flex-direction-row justify-content-between">
-                <div class="logoPrincipal col-sm-12 col-lg-5">
-                    <a href="index.html">
-                        <img class="logo m-2 rounded-circle" src="./assets/img/Logo_gimnasio.jpg" alt="Logo del gym" width="70px" height="70px">
-                    </a>
-                </div>
-                <nav class="navHeader col-sm-12 col-lg-7">
-                    <ul class="listaNav d-flex list-group-horizontal m-4">
-                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="#">Inicio</a></li>
-                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./pages/actividades.html">Actividades</a></li>
-                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./pages/horarios.html">Horarios</a></li>
-                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./pages/instalacion.html">Instalación</a></li>
-                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./pages/contacto.html">Registro</a></li>
-                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" target="_blank" href="https://www.facebook.com">Facebook</a></li>
-                    </ul>
-                </nav>               
-            </div>
-       </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Atrevete a cambiar tu rutina, comienza a cuidar la salud de tu cuerpo, completa ejercicios y observa como el paso de los dias van marcando tus cambios. Te esperamos"
+    />
+    <meta name="keywords" content="presentacion introduccion video" />
+    <title>Porto Gym | Gimnasio</title>
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./css/estilos.css" />
+    <script
+      src="https://kit.fontawesome.com/72d0c50021.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <header class="header container-fluid sticky-top">
+      <div
+        class="padreNavHeader row d-flex flex-direction-row justify-content-between"
+      >
+        <div class="logoPrincipal col-sm-12 col-lg-5">
+          <a href="index.html">
+            <img
+              class="logo m-2 rounded-circle"
+              src="./assets/img/Logo_gimnasio.jpg"
+              alt="Logo del gym"
+              width="70px"
+              height="70px"
+            />
+          </a>
+        </div>
+        <nav class="navHeader col-sm-12 col-lg-7">
+          <ul class="listaNav d-flex list-group-horizontal m-4">
+            <li class="box text-center list-group-item">
+              <a class="text-decoration-none h5" href="#">Inicio</a>
+            </li>
+            <li class="box text-center list-group-item">
+              <a class="text-decoration-none h5" href="./pages/actividades.html"
+                >Actividades</a
+              >
+            </li>
+            <li class="box text-center list-group-item">
+              <a class="text-decoration-none h5" href="./pages/horarios.html"
+                >Horarios</a
+              >
+            </li>
+            <li class="box text-center list-group-item">
+              <a class="text-decoration-none h5" href="./pages/instalacion.html"
+                >Instalación</a
+              >
+            </li>
+            <li class="box text-center list-group-item">
+              <a class="text-decoration-none h5" href="./pages/contacto.html"
+                >Registro</a
+              >
+            </li>
+            <li class="box text-center list-group-item">
+              <a
+                class="text-decoration-none h5"
+                target="_blank"
+                href="https://www.facebook.com"
+                >Facebook</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
-       <main class="main container">
-            <section>
-                <div>
-                    <a target="_blank" href="https://www.whatsapp.com">
-                        <img class="logoWsp d-block position-fixed bottom-0 end-0 m-2 rounded-circle" src="./assets/img/Logo_whatsapp.jpg" width="40px" height="40px">
-                    </a>
-                </div>
-            </section>    
-            <section>
-                <h1 class="tituloPrincipal h2 m-4">Comienza hoy una nueva vida</h1>
-                <div>
-                <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">Bienvenidos a Porto Gym, el gimnasio exclusivo para transformar y cuidar la salud de tu cuerpo.</p>
-                </div>
-                <div>
-                <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">Somos un gimnasio el cual llevó a cabo su apertura en el año 2015 y nos sentimos muy orgullosos de ejercer nuestra profesión y de brindarles las mejores rutinas personalizadas para cada uno de ustedes, con precios accesibles y la mejor dedicación para su confortabilidad, en esta pagina detallaremos las actividades que realizamos asi como donde contactárnos, horarios y más...</p>
-                </div>     
-            </section>  
-            <section>
-                <h2 class="tituloSub h2 text-center m-4">"Prepárate para el inicio de tu nueva historia"</h2>
-                <iframe class="video d-block mx-auto my-5 border border-secondary rounded" width="700" height="400" src="https://www.youtube.com/embed/xL6BvBUFG4Q"title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </section>
-       </main>
-       <footer class="footer container-fluid bg-white d-flex justify-content-center align-items-center">
-            <p class="piePagina fs-6 my-4"><i class="fa-solid fa-location-dot fa-xs" style="color: #8b0be0;"></i> Ubicación: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenída Edison (Puerto)<br><i class="fa-solid fa-envelope fa-xs" style="color: #8b0be0;"></i> Comunícate por mail: portogym@gmail.com<br><i class="fa-solid fa-phone fa-xs" style="color: #8b0be0;"></i> Teléfono: 2236052120</p>  
-       </footer>
-       <script src="./js/bootstrap.bundle.min.js"></script> 
-    </body>
+    <main class="main container">
+      <section>
+        <div>
+          <a target="_blank" href="https://www.whatsapp.com">
+            <img
+              class="logoWsp"
+              src="./assets/img/Logo_whatsapp.jpg"
+              alt="Logo de whatsapp"
+            />
+          </a>
+        </div>
+      </section>
+      <section>
+        <h1 class="tituloPrincipal h2 m-4">Comienza hoy una nueva vida</h1>
+        <div>
+          <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">
+            Bienvenidos a Porto Gym, el gimnasio exclusivo para transformar y
+            cuidar la salud de tu cuerpo.
+          </p>
+        </div>
+        <div>
+          <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">
+            Somos un gimnasio el cual llevó a cabo su apertura en el año 2015 y
+            nos sentimos muy orgullosos de ejercer nuestra profesión y de
+            brindarles las mejores rutinas personalizadas para cada uno de
+            ustedes, con precios accesibles y la mejor dedicación para su
+            confortabilidad, en esta pagina detallaremos las actividades que
+            realizamos asi como donde contactárnos, horarios y más...
+          </p>
+        </div>
+      </section>
+      <section>
+        <h2 class="tituloSub h2 text-center m-4">
+          "Prepárate para el inicio de tu nueva historia"
+        </h2>
+        <iframe
+          class="video d-block mx-auto my-5 border border-secondary rounded"
+          width="700"
+          height="400"
+          src="https://www.youtube.com/embed/xL6BvBUFG4Q"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write;encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      </section>
+    </main>
+    <footer
+      class="footer container-fluid bg-white d-flex justify-content-center align-items-center"
+    >
+      <p class="piePagina fs-6 my-4">
+        <i class="fa-solid fa-location-dot fa-xs" style="color: #8b0be0"></i>
+        Ubicación: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenída
+        Edison (Puerto)<br /><i
+          class="fa-solid fa-envelope fa-xs"
+          style="color: #8b0be0"
+        ></i>
+        Comunícate por mail: portogym@gmail.com<br /><i
+          class="fa-solid fa-phone fa-xs"
+          style="color: #8b0be0"
+        ></i>
+        Teléfono: 2236052120
+      </p>
+    </footer>
+    <script src="./js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
