--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -1,66 +1,146 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Conoce las rutinas realizadas en nuestro establecimiento y elige la atividad adecuada para ti">
-        <meta name="keywords" content="rutinas actividades">
-        <title>Rutinas Personalizadas | Porto Gym</title>
-        <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" href="../css/estilos.css">
-        <script src="https://kit.fontawesome.com/72d0c50021.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <header class="header container-fluid sticky-top">
-            <div class="padreNavHeader d-flex flex-direction-row justify-content-between">
-                <div class="logoPrincipal col-sm-12 col-lg-5">
-                    <a href="../index.html">
-                        <img class="logo m-2 rounded-circle" src="../assets/img/Logo_gimnasio.jpg" alt="Logo del gym" width="70px" height="70px">
-                    </a>
-                </div>
-                <nav class="navHeader col-sm-12 col-lg-7">
-                    <ul class="listaNav d-flex list-group-horizontal m-4">
-                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="../index.html">Inicio</a></li>
-                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="#">Actividades</a></li>
-                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./horarios.html">Horarios</a></li>
-                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./instalacion.html">Instalación</a></li>
-                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./contacto.html">Registro</a></li>
-                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" target="_blank" href="https://www.facebook.com">Facebook</a></li>
-                    </ul>
-                </nav>               
-            </div>
-       </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Conoce las rutinas realizadas en nuestro establecimiento y elige la atividad adecuada para ti"
+    />
+    <meta name="keywords" content="rutinas actividades" />
+    <title>Rutinas Personalizadas | Porto Gym</title>
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../css/estilos.css" />
+    <script
+      src="https://kit.fontawesome.com/72d0c50021.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <header class="header container-fluid sticky-top">
+      <div
+        class="padreNavHeader d-flex flex-direction-row justify-content-between"
+      >
+        <div class="logoPrincipal col-sm-12 col-lg-5">
+          <a href="../index.html">
+            <img
+              class="logo m-2 rounded-circle"
+              src="../assets/img/Logo_gimnasio.jpg"
+              alt="Logo del gym"
+              width="70px"
+              height="70px"
+            />
+          </a>
+        </div>
+        <nav class="navHeader col-sm-12 col-lg-7">
+          <ul class="listaNav d-flex list-group-horizontal m-4">
+            <li class="box text-center list-group-item">
+              <a class="text-decoration-none h5" href="../index.html">Inicio</a>
+            </li>
+            <li class="box text-center list-group-item">
+              <a class="text-decoration-none h5" href="#">Actividades</a>
+            </li>
+            <li class="box text-center list-group-item">
+              <a class="text-decoration-none h5" href="./horarios.html"
+                >Horarios</a
+              >
+            </li>
+            <li class="box text-center list-group-item">
+              <a class="text-decoration-none h5" href="./instalacion.html"
+                >Instalación</a
+              >
+            </li>
+            <li class="box text-center list-group-item">
+              <a class="text-decoration-none h5" href="./contacto.html"
+                >Registro</a
+              >
+            </li>
+            <li class="box text-center list-group-item">
+              <a
+                class="text-decoration-none h5"
+                target="_blank"
+                href="https://www.facebook.com"
+                >Facebook</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
-       <main class="main container">
-            <section>
-                <div>
-                    <a target="_blank" href="https://www.whatsapp.com">
-                        <img class="logoWsp d-block position-fixed bottom-0 end-0 m-2 rounded-circle" src="../assets/img/Logo_whatsapp.jpg" width="40px" height="40px">
-                    </a>
-                </div>
-            </section>            
-            <section>
-                <h1 class="tituloPrincipal h2 m-4">Excelentes rutinas</h1>
-                <img class="imagenes d-block mx-auto border border-4 border-white rounded" src="../assets/img/Actividades.webp" alt="Foto de actividades" width="800" height="500">
-            </section>  
-            <section>
-                <h2 class="tituloSub h2 text-center m-4">Entrenamiento personalizado:</h2>
-                <p data-aos="zoom-in" class="tamanioParrafo text-center fs-5 fst-italic lh-lg">Dependiendo de la condición y los objetivos de cada persona se le asigna una rutina en particular, con la mejor atención.</p>
-            </section>
-            <section>
-                <h2 class="tituloSub h2 text-center m-4">Clases de spinning:</h2>
-                <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">Contamos con clases de spinning con dos franjas horarias distintas, de mañana y de tarde, con equipamiento de alta calidad para brindarles el mejor servicio.</p>
-            </section>
-            <section>
-                <h2 class="tituloSub h2 text-center m-4">Clases de pilates:</h2>
-                <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg mb-5">Y por supuesto tambien contamos con clases de pilates en una sola franja horaria con la mejor atención y predisposición.</p>
-            </section>   
-       </main>
-       <footer class="footer container-fluid bg-white d-flex justify-content-center align-items-center">
-            <p class="piePagina fs-6 my-4"><i class="fa-solid fa-location-dot fa-xs" style="color: #8b0be0;"></i> Ubicación: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenída Edison (Puerto)<br><i class="fa-solid fa-envelope fa-xs" style="color: #8b0be0;"></i> Comunícate por mail: portogym@gmail.com<br><i class="fa-solid fa-phone fa-xs" style="color: #8b0be0;"></i> Teléfono: 2236052120</p>  
-        </footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    </body>
+    <main class="main container">
+      <section>
+        <div>
+          <a target="_blank" href="https://www.whatsapp.com">
+            <img
+              class="logoWsp d-block position-fixed bottom-0 end-0 m-2 rounded-circle"
+              src="../assets/img/Logo_whatsapp.jpg"
+              alt="Logo de whatsapp"
+            />
+          </a>
+        </div>
+      </section>
+      <section>
+        <h1 class="tituloPrincipal h2 m-4">Excelentes rutinas</h1>
+        <img
+          class="imagenes d-block mx-auto border border-4 border-white rounded"
+          src="../assets/img/Actividades.webp"
+          alt="Foto de actividades"
+        />
+      </section>
+      <section>
+        <h2 class="tituloSub h2 text-center m-4">
+          Entrenamiento personalizado:
+        </h2>
+        <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">
+          Dependiendo de la condición y los objetivos de cada persona se le
+          asigna una rutina en particular, con la mejor atención.
+        </p>
+      </section>
+      <section>
+        <h2 class="tituloSub h2 text-center m-4">Clases de spinning:</h2>
+        <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">
+          Contamos con clases de spinning con dos franjas horarias distintas, de
+          mañana y de tarde, con equipamiento de alta calidad para brindarles el
+          mejor servicio.
+        </p>
+      </section>
+      <section>
+        <h2 class="tituloSub h2 text-center m-4">Clases de pilates:</h2>
+        <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg mb-5">
+          Y por supuesto tambien contamos con clases de pilates en una sola
+          franja horaria con la mejor atención y predisposición.
+        </p>
+      </section>
+    </main>
+    <footer
+      class="footer container-fluid bg-white d-flex justify-content-center align-items-center"
+    >
+      <p class="piePagina fs-6 my-4">
+        <i class="fa-solid fa-location-dot fa-xs" style="color: #8b0be0"></i>
+        Ubicación: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenída
+        Edison (Puerto)<br /><i
+          class="fa-solid fa-envelope fa-xs"
+          style="color: #8b0be0"
+        ></i>
+        Comunícate por mail: portogym@gmail.com<br /><i
+          class="fa-solid fa-phone fa-xs"
+          style="color: #8b0be0"
+        ></i>
+        Teléfono: 2236052120
+      </p>
+    </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
