--- a/pages/horarios.html
+++ b/pages/horarios.html
@@ -1,70 +1,151 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Observa los horarios disponibles de nuestro establecimiento asi como de cada una de nuestras actvidades y elige el mejor momento del dia para ti">
-        <meta name="keywords" content="horarios mañana tarde noche">
-        <title>Horarios de apertura | Porto Gym</title>
-        <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" href="../css/estilos.css">
-        <script src="https://kit.fontawesome.com/72d0c50021.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <header class="header container-fluid sticky-top">
-            <div class="padreNavHeader d-flex flex-direction-row justify-content-between">
-                <div class="logoPrincipal col-sm-12 col-lg-5">
-                    <a href="../index.html">
-                        <img class="logo m-2 rounded-circle" src="../assets/img/Logo_gimnasio.jpg" alt="Logo del gym" width="70px" height="70px">
-                    </a>
-                </div>
-                <nav class="navHeader col-sm-12 col-lg-7">
-                    <ul class="listaNav d-flex list-group-horizontal m-4">
-                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="../index.html">Inicio</a></li>
-                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./actividades.html">Actividades</a></li>
-                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="#">Horarios</a></li>
-                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./instalacion.html">Instalación</a></li>
-                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" href="./contacto.html">Registro</a></li>
-                        <li class="box text-center list-group-item"><a class="text-decoration-none h5" target="_blank" href="https://www.facebook.com">Facebook</a></li>
-                    </ul>
-                </nav>               
-            </div>
-       </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Observa los horarios disponibles de nuestro establecimiento asi como de cada una de nuestras actvidades y elige el mejor momento del dia para ti"
+    />
+    <meta name="keywords" content="horarios mañana tarde noche" />
+    <title>Horarios de apertura | Porto Gym</title>
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../css/estilos.css" />
+    <script
+      src="https://kit.fontawesome.com/72d0c50021.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <header class="header container-fluid sticky-top">
+      <div
+        class="padreNavHeader d-flex flex-direction-row justify-content-between"
+      >
+        <div class="logoPrincipal col-sm-12 col-lg-5">
+          <a href="../index.html">
+            <img
+              class="logo m-2 rounded-circle"
+              src="../assets/img/Logo_gimnasio.jpg"
+              alt="Logo del gym"
+            />
+          </a>
+        </div>
+        <nav class="navHeader col-sm-12 col-lg-7">
+          <ul class="listaNav d-flex list-group-horizontal m-4">
+            <li class="box text-center list-group-item">
+              <a class="text-decoration-none h5" href="../index.html">Inicio</a>
+            </li>
+            <li class="box text-center list-group-item">
+              <a class="text-decoration-none h5" href="./actividades.html"
+                >Actividades</a
+              >
+            </li>
+            <li class="box text-center list-group-item">
+              <a class="text-decoration-none h5" href="#">Horarios</a>
+            </li>
+            <li class="box text-center list-group-item">
+              <a class="text-decoration-none h5" href="./instalacion.html"
+                >Instalación</a
+              >
+            </li>
+            <li class="box text-center list-group-item">
+              <a class="text-decoration-none h5" href="./contacto.html"
+                >Registro</a
+              >
+            </li>
+            <li class="box text-center list-group-item">
+              <a
+                class="text-decoration-none h5"
+                target="_blank"
+                href="https://www.facebook.com"
+                >Facebook</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
-       <main class="main container">
-            <section>
-                <div>
-                    <a target="_blank" href="https://www.whatsapp.com">
-                        <img class="logoWsp d-block position-fixed bottom-0 end-0 m-2 rounded-circle" src="../assets/img/Logo_whatsapp.jpg" width="40px" height="40px">
-                    </a>
-                </div>
-            </section>
-            <section>
-                <h1 class="tituloPrincipal h2 m-4">Nuestros horarios</h1>
-                <img class="imagenes d-block mx-auto border border-4 border-white rounded" src="../assets/img/Horarios.webp" alt="Foto de horarios" width="800" height="500">
-            </section>
-            <section>
-                <h2 class="tituloSub h2 text-center m-4">Horario general:</h2>
-                <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">Lunes a viernes 7:00 am a 23:00 pm</p>
-            </section>
-            <section>
-                <h2 class="tituloSub h2 text-center m-4">Horario de clases de spinning:</h2>
-                <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">Lunes, miércoles y viernes 8:00 am a 9:30 am (mañana); 20:00 pm a 21:30 pm (noche)</p>
-            </section>
-            <section>
-                <h2 class="tituloSub h2 text-center m-4">Horario de clases de pilates:</h2>
-                <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">Martes y jueves 18:00 pm a 19:30 pm</p>
-            </section>
-            <section>
-                <h2 class="tituloSub h2 text-center m-4">Pregúntanos</h2>
-                <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg mb-5"> Por consultas en general comunícate con nosotros a través de nuestro whatsapp y síguenos en nuestra cuenta de instagram (@porto_gym). Comienza hoy una nueva vida, TE ESPERAMOS !!</p>
-            </section>
-       </main>
-       <footer class="footer container-fluid bg-white d-flex justify-content-center align-items-center">
-            <p class="piePagina fs-6 my-4"><i class="fa-solid fa-location-dot fa-xs" style="color: #8b0be0;"></i> Ubicación: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenída Edison (Puerto)<br><i class="fa-solid fa-envelope fa-xs" style="color: #8b0be0;"></i> Comunícate por mail: portogym@gmail.com<br><i class="fa-solid fa-phone fa-xs" style="color: #8b0be0;"></i> Teléfono: 2236052120</p>  
-        </footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    </body>
+    <main class="main container">
+      <section>
+        <div>
+          <a target="_blank" href="https://www.whatsapp.com">
+            <img
+              class="logoWsp d-block position-fixed bottom-0 end-0 m-2 rounded-circle"
+              src="../assets/img/Logo_whatsapp.jpg"
+              alt="Logo de whatsapp"
+            />
+          </a>
+        </div>
+      </section>
+      <section>
+        <h1 class="tituloPrincipal h2 m-4">Nuestros horarios</h1>
+        <img
+          class="imagenes d-block mx-auto border border-4 border-white rounded"
+          src="../assets/img/Horarios.webp"
+          alt="Foto de horarios"
+        />
+      </section>
+      <section>
+        <h2 class="tituloSub h2 text-center m-4">Horario general:</h2>
+        <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">
+          Lunes a viernes 7:00 am a 23:00 pm
+        </p>
+      </section>
+      <section>
+        <h2 class="tituloSub h2 text-center m-4">
+          Horario de clases de spinning:
+        </h2>
+        <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">
+          Lunes, miércoles y viernes 8:00 am a 9:30 am (mañana); 20:00 pm a
+          21:30 pm (noche)
+        </p>
+      </section>
+      <section>
+        <h2 class="tituloSub h2 text-center m-4">
+          Horario de clases de pilates:
+        </h2>
+        <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg">
+          Martes y jueves 18:00 pm a 19:30 pm
+        </p>
+      </section>
+      <section>
+        <h2 class="tituloSub h2 text-center m-4">Pregúntanos</h2>
+        <p class="tamanioParrafo text-center fs-5 fst-italic lh-lg mb-5">
+          Por consultas en general comunícate con nosotros a través de nuestro
+          whatsapp y síguenos en nuestra cuenta de instagram (@porto_gym).
+          Comienza hoy una nueva vida, TE ESPERAMOS !!
+        </p>
+      </section>
+    </main>
+    <footer
+      class="footer container-fluid bg-white d-flex justify-content-center align-items-center"
+    >
+      <p class="piePagina fs-6 my-4">
+        <i class="fa-solid fa-location-dot fa-xs" style="color: #8b0be0"></i>
+        Ubicación: 12 de octubre 3432 Mar del Plata, entre calle Acha y Avenída
+        Edison (Puerto)<br /><i
+          class="fa-solid fa-envelope fa-xs"
+          style="color: #8b0be0"
+        ></i>
+        Comunícate por mail: portogym@gmail.com<br /><i
+          class="fa-solid fa-phone fa-xs"
+          style="color: #8b0be0"
+        ></i>
+        Teléfono: 2236052120
+      </p>
+    </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
